syntax = "proto3";
package pb;

option go_package = "./pb";

import "google/protobuf/empty.proto";
import "google/api/annotation.proto";
import "include/graphql.proto";
import "google/protobuf/timestamp.proto";

service VCSConnectionService {
    rpc ListAlfredVCSConnection(google.protobuf.Empty) returns (ListAlfredVCSConnectionResponse);
    rpc Connect(ConnectRequest) returns (ConnectResponse){
        option (google.api.http) = {
            get: "/v1/vcs-connection/connect/{provider}"
        };
    };
    rpc Connected(ConnectedRequest) returns (AccountVCSConnection){
        option (google.api.http) = {
            get: "/v1/vcs-connection/connected/{provider}"
        };
    };

   rpc ListVCSConnection(ListVCSConnectionRequest) returns (ListVCSConnectionResponse){
       option (google.api.http) = {
           get: "/v1/vcs-connection/list-vcs-connections"
       };
   }

   rpc RevokeVCSToken(RevokeVCSTokenRequest) returns (google.protobuf.Empty);
   rpc RenewVCSToken(RenewVCSTokenRequest) returns (google.protobuf.Empty);

}

message ListAlfredVCSConnectionResponse{
    repeated string providers =1;
}
message ConnectRequest{
    VCSConnectionProvider provider = 1;
}
message ConnectResponse{
    string uri = 1;
    string account_id=2;
    string user_id = 3;
    string temp_jwt_token = 4;
}

message ConnectedRequest{
    VCSConnectionProvider provider = 1;
    string state =2;
    string code = 3;
}
message ConnectedResponse{

}

message VCSConnection {
    //id generated by uuid
    string id = 1;
    VCSConnectionProvider provider = 2;
    string connection_id = 3;
    string accessToken = 4 ;
    string refreshToken = 5 ;
    google.protobuf.Timestamp accessTokenExpiry = 6;
    google.protobuf.Timestamp refreshTokenExpiry = 7;
    bool revoked = 8 ;
    string account_id = 9;
}

message AccountVCSConnection{
    string id = 1;
    VCSConnectionProvider provider = 2;
    string account_id = 3;
}

enum VCSConnectionProvider{
    VCS_UNKNOWN = 0;
    VCS_GITHUB = 1;
    VCS_GITLAB = 2;
    VCS_BITBUCKET = 3;
}

message ListVCSConnectionRequest{
    string account_id = 1;
}
message ListVCSConnectionResponse{
    repeated AccountVCSConnection vcs_connection = 1;
}

message RevokeVCSTokenRequest{
    VCSConnectionProvider provider = 2;
    string vcs_id = 1;

}
message RenewVCSTokenRequest{
    VCSConnectionProvider provider = 1;
}
